--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>SuperNinja</h1>
-        <a href="/contact.html"></a>
+        <a href="/contact.html">Contact</a>
         <p>Lorem ipsum dolor sit amet consectetur adispicidnfrefgeiuwfgejwfbgrejhfgjhrefgjwe</p>
         <p>Lorem ipsum dolor sit amet consectetur adispicidnfrefgeiuwfgejwfbgrejhfgjhrefgjwe</p>
         <p>Lorem ipsum dolor sit amet consectetur adispicidnfrefgeiuwfgejwfbgrejhfgjhrefgjwe</p>
